--- a/index.html
+++ b/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script type="text/javascript" src ="app.js"></script>
+
+<head>
+    <script type="text/javascript" src="app.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Shift Multiple Checkboxes</title>
-  </head>
-  <body>
+</head>
 
-  </body>
+<body>
+
+    <div class="inbox">
+
+        <div class="item">
+            <input type="checkbox">
+            <label>Label 1</label>
+        </div>
+
+        <div class="item">
+            <input type="checkbox">
+            <label>Label 2</label>
+        </div>
+
+        <div class="item">
+            <input type="checkbox">
+            <label>Label 3</label>
+        </div>
+
+        <div class="item">
+            <input type="checkbox">
+            <label>Label 4</label>
+        </div>
+
+        <div class="item">
+            <input type="checkbox">
+            <label>Label 5</label>
+        </div>
+
+        <div class="item">
+            <input type="checkbox">
+            <label>Label 6</label>
+        </div>
+
+        <div class="item">
+            <input type="checkbox">
+            <label>Label 7</label>
+        </div>
+
+        <div class="item">
+            <input type="checkbox">
+            <label>Label 8</label>
+        </div>
+
+        <div class="item">
+            <input type="checkbox">
+            <label>Label 9</label>
+        </div>
+
+    </div>
+
+</body>
+
 </html>
